2013-07-15  Xavier Perseguers  <xavier@typo3.org>

	* [BUGFIX] #49534: Timezone is not considered

2013-06-24  Xavier Perseguers  <xavier@typo3.org>

	* [BUGFIX] #49377: Scheduler import fails

2013-06-21  Xavier Perseguers  <xavier@typo3.org>

	* [TASK] #49302: Assign categories from multiple import configurations
	* [BUGFIX] #6589: Problems with category and field mapping settings
	* [TASK] Cleanup and monster import from Jigal's fixes
	* [TASK] Raise compatibility to TYPO3 4.7.99 (known to work)

2010-06-10  Xavier Perseguers  <typo3@perseguers.ch>

	* [BUGFIX] #8124: User mapping is not taken into account

2009-12-12 Steffen Kamper <info@sk-typo3.de>

	* [TASK] Initial code generated with kickstarter