@@ -1,5 +1,6 @@
 2013-07-15  Xavier Perseguers  <xavier@typo3.org>
 
+	* [FEATURE] #50024: Synchronization of feed entries
 	* [BUGFIX] #49534: Timezone is not considered
 
 2013-06-24  Xavier Perseguers  <xavier@typo3.org>
